@@ -12,10 +12,14 @@
 	<target name="run" >
 		<echo message="运行应用程序......" />
         <mkdir dir="data" />
-		<java classname="com.glaf.core.db.dataexport.DbToDBMyBatisExporter" fork="true">
+		<!-- <java classname="com.glaf.core.db.dataexport.DbToDBMyBatisExporter" fork="true">
 			<classpath refid="classpath"/>
 			<jvmarg line="-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m"/>
 			<arg line="default h2 ./data/glafdb"/>
+		</java> -->
+        <java classname="com.glaf.core.startup.BootstrapManager" fork="true">
+			<classpath refid="classpath"/>
+			<jvmarg line="-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m"/>
 		</java>
 	</target>
 
